fix(phase-a): robustez — null guards, casts seguros y cooldown en autopilot
- CommandManager: eliminar casts inseguros a Locomotive en buildTrainAction;
  usar interfaz Tractor directamente con null checks.
- Trip: setStops(null) normaliza a lista vacía; addStop y getStops inicializan
  stops si es null (protección ante deserialización Jackson).
- AutoPilotImpl: añadir routeRetryCooldown (100 ticks) para evitar A* en cada
  tick cuando calculateRoute() falla.
- Train: simplificar assignDefaultDirectorLinker y getTractors (instanceof
  idiomático, toList()).
- Tests: cooldown test en AutoPilotImplTest; 2 tests null-safety en TripTest.

Closes #phase-a-robustness